--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio:                '一个始终相信自己的代码一定有bug的小菜'
 description:        "一个小菜农"
 reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/logo.png'
+logo:               'assets/img/hehe.jpg'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
