1. change sina weibo

--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ instagram:          haxwn
 #dribbble:          username
 #youtube:           username
 #soundcloud:        username
-weibo:             你还别真说
+weibo:              573322528
 #flickr:            username
 #codepen:           username
 #keybase:           username
