--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ disqus_shortname:   taylantatli
 email:               bigfacemail@gmail.com
 #twitter:            username
 #facebook:           username
-github:             BigPieFace
+github:             haxwn
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
