1.change English name 2.Learning Markdown grammar

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:              Oneing
+title:              Onein
 bio:                '一个始终相信自己的代码一定有bug的小菜'
 description:        "一个小菜农"
 reading_time:       true
